Amélioration du pom.xml pour une meilleur fonctionnalité du projet sur n'importe quelle version de javaFx et de Système d'exploitation